testsuite/negative/property-initializer.n
using System.Console;

class Test
{
  public Get    : int { get { 1 } default { } } // E: initializer can be set only for automatically generated propertie
  public GetSet : int { get { 1 } set { } default { } } // E: initializer can be set only for automatically generated properties
}

[Record]
class TestRecord
{
  public Get    : int { get { 1 } default { } } // E: initializer can be set only for automatically generated properties
  public GetSet : int { get { 1 } set { } default { } } // E: initializer can be set only for automatically generated properties
}

interface ITest
{
  Get : int { get; default { } } // E: initializer cannot be used in interfaces
  GetSet : int { get; default { } } // E: initializer cannot be used in interfaces
}
